--- a/proxy/nginx/limit.conf
+++ b/proxy/nginx/limit.conf
@@ -4,12 +4,12 @@ if ($http_user_agent ~* (Scrapy|Curl|HttpClient)) {
 }
 
 # 禁止指定UA及UA为空的访问
-if ($http_user_agent ~ "ApacheBench|WebBench|HttpClient|Java|python|Python-urllib|Go-http-client|FeedDemon|JikeSpider|Indy Library|Alexa Toolbar|AskTbFXTV|AhrefsBot|CrawlDaddy|CoolpadWebkit|Feedly|UniversalFeedParser|Microsoft URL Control|Swiftbot|ZmEu|oBot|jaunty|lightDeckReports Bot|YYSpider|DigExt|YisouSpider|MJ12bot|heritrix|EasouSpider|LinkpadBot|Ezooms|^$" ) {
+if ($http_user_agent ~ "ApacheBench|WebBench|HttpClient|Java|Jullo|python|Python-urllib|Python-requests|Go-http-client|FeedDemon|JikeSpider|Indy Library|FlightDeckReports Bot|Alexa Toolbar|AskTbFXTV|AhrefsBot|CrawlDaddy|CoolpadWebkit|Feedly|UniversalFeedParser|Microsoft URL Control|Swiftbot|ZmEu|oBot|jaunty|lightDeckReports Bot|Linguee Bot|YYSpider|DigExt|YisouSpider|MJ12bot|heritrix|EasouSpider|ZmEu phpmyadmin|WinHttp|LinkpadBot|Ezooms|^$" ) {
     return 403;
 }
 
 # 禁止爬虫抓取
-if ($http_user_agent ~* "qihoobot|Baiduspider|Googlebot|Googlebot-Mobile|Googlebot-Image|Mediapartners-Google|Adsbot-Google|Feedfetcher-Google|Yahoo! Slurp|Yahoo! Slurp China|YoudaoBot|Sosospider|Sogou spider|Sogou web spider|MSNBot|ia_archiver|Tomato Bot") {
+if ($http_user_agent ~* "qihoobot|Baiduspider|Googlebot|Googlebot-Mobile|Googlebot-Image|Mediapartners-Google|Adsbot-Google|Feedfetcher-Google|YandexBot|Yahoo! Slurp|Yahoo! Slurp China|YoudaoBot|Sosospider|Sogou spider|Sogou web spider|MSNBot|ia_archiver|Tomato Bot") {
     return 403;
 }
 
