--- a/proxy/nginx/limit.conf
+++ b/proxy/nginx/limit.conf
@@ -13,10 +13,10 @@ if ($http_user_agent ~* "qihoobot|Baiduspider|Googlebot|Googlebot-Mobile|Googleb
     return 403;
 }
 
-# 禁止非GET|HEAD|POST方式的抓取
-if ($request_method !~ ^(GET|HEAD|POST)$) {
-    return 403;
-}
+# 禁止非GET|HEAD|POST方式的抓取，开启后反代 cloudreve 无法正常使用
+# if ($request_method !~ ^(GET|HEAD|POST)$) {
+#     return 403;
+# }
 
 # 禁止特殊的user_agent的访问
 if ($http_user_agent ~ "Mozilla/4.0\ \(compatible;\ MSIE\ 6.0;\ Windows\ NT\ 5.1;\ SV1;\ .NET\ CLR\ 1.1.4322;\ .NET\ CLR\ 2.0.50727\)") {
