--- a/proxy/nginx/stream.conf
+++ b/proxy/nginx/stream.conf
@@ -2,6 +2,7 @@ stream {
     map $ssl_preread_server_name $backend_name {
         example.com      cloudreve;
         www.example.com  cloudreve;
+        pan.example.com  unpack;
         default          default_backend;
     }
 
@@ -9,15 +10,28 @@ stream {
         server unix:/dev/shm/nginx/cloudreve.sock;
     }
 
+    upstream unpack {
+        server unix:/dev/shm/nginx/unpack.sock;
+    }
+
     upstream default_backend {
         server unix:/dev/shm/nginx/default_backend.sock;
     }
 
+    upstream raw {
+        server unix:/dev/shm/nginx/raw.sock;
+    }
+
     server {
-        listen 443 reuseport;
-        listen [::]:443 reuseport;
-        proxy_pass  $backend_name;
-        ssl_preread on;
+        listen         443 reuseport;
+        listen         [::]:443 reuseport;
+        proxy_pass     $backend_name;
+        ssl_preread    on;
         proxy_protocol on;
+    }
+
+    server {
+        listen     unix:/dev/shm/nginx/unpack.sock proxy_protocol;
+        proxy_pass raw;
     }
 }
