--- a/proxy/nginx/conf/limit.conf
+++ b/proxy/nginx/conf/limit.conf
@@ -14,11 +14,21 @@ if ($http_user_agent ~* "qihoobot|Baiduspider|Googlebot|Googlebot-Mobile|Googleb
 }
 
 # 禁止非GET|HEAD|POST方式的抓取，开启后反代 cloudreve 无法正常使用
-# if ($request_method !~ ^(GET|HEAD|POST)$) {
-#     return 444;
-# }
+if ($request_method !~ ^(GET|HEAD|POST)$) {
+    return 444;
+}
 
 # 禁止特殊的user_agent的访问
 if ($http_user_agent ~ "Mozilla/4.0\ \(compatible;\ MSIE\ 6.0;\ Windows\ NT\ 5.1;\ SV1;\ .NET\ CLR\ 1.1.4322;\ .NET\ CLR\ 2.0.50727\)") {
+    return 444;
+}
+
+# 禁止恶意访问
+location ~* \.(php|asp|aspx|jsp|swp|git|env|yaml|yml|sql|db|bak|ini|docx|doc|log)$ {
+    return 444;
+}
+
+# 禁止恶意访问
+location ~* (wordpress|wp-admin|wp-content|wp-includes|phpinfo|wlwmanifest|phpMyAdmin|xmlrpc) {
     return 444;
 }
